Added posts,pages,users and contents page

--- a/templates/layouts/admin-layout.jade
+++ b/templates/layouts/admin-layout.jade
@@ -45,18 +45,16 @@ html(lang='en')
         .row    
             .col-sm-3.col-md-2.sidebar
                 ul.nav.nav-sidebar
-                    li.active
-                        a(href='#')
-                            | Home 
-                            span.sr-only (current)
                     li
-                        a(href='#') Posts
+                        a(href='/admin') Home
                     li
-                        a(href='#') Contents
+                        a(href='/admin/posts') Posts
                     li
-                        a(href='#') Pages
+                        a(href='/admin/contents') Contents
                     li
-                        a(href='#') Users
+                        a(href='/admin/pages') Pages
+                    li
+                        a(href='/admin/users') Users
                     li
                         a(href='#') Analytics
                     li
