--- a/templates/views/admin/index.jade
+++ b/templates/views/admin/index.jade
@@ -46,17 +46,15 @@ html(lang='en')
             .col-sm-3.col-md-2.sidebar
                 ul.nav.nav-sidebar
                     li.active
-                        a(href='#')
-                            | Home 
-                            span.sr-only (current)
+                        a(href='admin') Home
                     li
-                        a(href='#') Posts
+                        a(href='admin/posts') Posts
                     li
-                        a(href='#') Contents
+                        a(href='admin/contents') Contents
                     li
-                        a(href='#') Pages
+                        a(href='admin/pages') Pages
                     li
-                        a(href='#') Users
+                        a(href='admin/users') Users
                     li
                         a(href='#') Analytics
                     li
