--- a/templates/views/admin/posts.jade
+++ b/templates/views/admin/posts.jade
@@ -1,3 +1,12 @@
 extends ../../layouts/admin-layout
 
 block content
+  .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
+    nav.cm-navbar.cm-navbar-default.cm-navbar-slideup
+      .cm-flex
+        .cm-breadcrumb-container
+          ol.breadcrumb
+            li
+              a(href='#') Posts
+            li
+              a(href='#') Post Categories
