--- a/templates/layouts/eresources.jade
+++ b/templates/layouts/eresources.jade
@@ -21,7 +21,7 @@ html
 
     link(rel="stylesheet" type="text/css" href="/styles/technology.css")
     script(src='https://use.fontawesome.com/b2a273c68b.js')
-    
+
     script(type='text/javascript').
       var _paq = _paq || [];
       _paq.push(['trackPageView']);
@@ -145,7 +145,7 @@ html
 
       //- Flash messages allow you to display once-off status messages to users, e.g. form
       //- validation errors, success messages, etc.
-      +flash-messages(messages)
+      //- +flash-messages(messages)
 
       //- The content block should contain the body of your template's content
       block content
