--- a/templates/views/admin/publications.jade
+++ b/templates/views/admin/publications.jade
@@ -8,10 +8,8 @@ block content
                 p
             .col-md-9
                 ol.breadcrumb
-                    li.active Community Views
+                    li.active Publications Settings
                     li
-                        a(href='#') Discussion Views
+                        a(href='#') Publications
                     li 
-                        a(href='#') Group Views
-                    li 
-                        a(href='#') Report Views
+                        a(href='#') Publication Lines
