Added post categories

--- a/templates/views/admin/posts-categories.jade
+++ b/templates/views/admin/posts-categories.jade
@@ -7,9 +7,9 @@ block content
         .cm-breadcrumb-container
           ol.breadcrumb
             li
-              a(href='#') Posts
+              a(href='admin/posts') Posts
             li
-              a(href='admin/post-categories') Post Categories
+              a(href='#') Post Categories
   .jumbotron
-      p No posts found...
-      a.btn.btn-lg.btn-success(href='#', role='button') + Create Post
+      p No posts categories...
+      a.btn.btn-lg.btn-success(href='#', role='button') + Create Post Category
