--- a/templates/layouts/admin-layout.jade
+++ b/templates/layouts/admin-layout.jade
@@ -10,6 +10,9 @@ html(lang='en')
     // Bootstrap
     link(href='/styles/bootstrap/bootstrap.min.css', rel='stylesheet')
     link(href='/styles/bootstrap/dashboard.css', rel='stylesheet')
+    link(href='/styles/bootstrap/jumbotron-narrow.css', rel='stylesheet')
+
+
     // HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
     // WARNING: Respond.js doesn't work if you view the page via file://
     //if lt IE 9
