--- a/templates/views/admin/index.jade
+++ b/templates/views/admin/index.jade
@@ -50,9 +50,9 @@ html(lang='en')
                     li
                         a(href='admin/posts') Posts
                     li
-                        a(href='admin/contents') Contents
+                        a(href='admin/contents_fiesta') Contents
                     li
-                        a(href='admin/pages') Pages
+                        a(href='admin/base_pages') Pages
                     li
                         a(href='admin/users') Users
                     li
