--- a/templates/views/admin/posts_categories.jade
+++ b/templates/views/admin/posts_categories.jade
@@ -6,10 +6,10 @@ block content
       .cm-flex
         .cm-breadcrumb-container
           ol.breadcrumb
-            li.active
-              a(href='#') Posts
             li
-              a(href='/admin/posts_categories') Post Categories
+              a(href='/admin/posts') Posts
+            li
+              a(href='#') Post Categories
   .jumbotron
-      p No posts found...
-      a.btn.btn-lg.btn-success(href='#', role='button') + Create Post
+      p No posts categories...
+      a.btn.btn-lg.btn-success(href='#', role='button') + Create Post Category
