--- a/templates/views/eresources/feedback.jade
+++ b/templates/views/eresources/feedback.jade
@@ -11,7 +11,7 @@ block content
             hr
           .col-md-12
             form(method='POST')
-              input(type='hidden',name='action',value='feedback')
+              input(type='hidden',name='action',value='submit-feedback')
               input(type='hidden',name='publicationID',value=formData.publicationID)
               input(type='hidden',name='userID',value=formData.userID)
               input(type='hidden',name='redirect',value=redirect)
@@ -70,26 +70,26 @@ block content
                   input(type='radio',name='design',value='Unsatisfactory/Needs Improvement')
                   | Unsatisfactory/Needs Improvement
 
-              label(for='response-time-rating') Download Time
-              .radio#response-time-rating(name='responseTime',value='formData.responseTime')
+              label(for='response-rating') Download Time
+              .radio#response-rating(name='response',value='formData.response')
                 label(style="margin-right: 15px;")
-                  input(type='radio',name='responseTime',value='Outstanding')
+                  input(type='radio',name='response',value='Outstanding')
                   | Outstanding
                 label(style="margin-right: 15px;")
-                  input(type='radio',name='responseTime',value='Very Satisfactory')
+                  input(type='radio',name='response',value='Very Satisfactory')
                   | Very Satisfactory
                 label(style="margin-right: 15px;")
-                  input(type='radio',name='responseTime',value='Satisfactory')
+                  input(type='radio',name='response',value='Satisfactory')
                   | Satisfactory
                 label(style="margin-right: 15px;",value='Fair')
-                  input(type='radio',name='responseTime')
+                  input(type='radio',name='response')
                   | Fair
                 label(style="margin-right: 15px;")
-                  input(type='radio',name='responseTime',value='Unsatisfactory/Needs Improvement')
+                  input(type='radio',name='response',value='Unsatisfactory/Needs Improvement')
                   | Unsatisfactory/Needs Improvement
 
               .input-group(style='width:100%;margin-top:10px;margin-bottom:25px;')
-                input(type='text',placeholder='Comments',name='comments',aria-label='Comments').form-control
+                input(type='text',placeholder='Comments',name='comments',aria-label='Comments',value=formData.comments).form-control
 
 
               button(type='submit').btn.btn-primary Submit
