added analytics pages w/ permissions

--- a/templates/layouts/admin-default.jade
+++ b/templates/layouts/admin-default.jade
@@ -56,7 +56,7 @@ html(lang='en')
                     li
                         a(href='/admin/users') Users
                     li
-                        a(href='/admin/analytics') Analytics
+                        a(href='/admin/community-views') Analytics
                     li
                         a(href='/admin/community') Community
                     li
