Added signup page

--- a/templates/views/admin/index.jade
+++ b/templates/views/admin/index.jade
@@ -20,7 +20,7 @@ html(lang='en')
 
   block head
 
-  body
+   block content
     
     nav.navbar.navbar-inverse.navbar-fixed-top
         .container-fluid
