added elearning & publications w/ permissions

--- a/templates/layouts/admin-default.jade
+++ b/templates/layouts/admin-default.jade
@@ -64,7 +64,7 @@ html(lang='en')
                     li
                         a(href='#') Categories
                     li
-                        a(href='#') ELearning
+                        a(href='/admin/learning-objects') ELearning
 
 
     
