Fixed signup page

--- a/templates/views/admin/index.jade
+++ b/templates/views/admin/index.jade
@@ -20,7 +20,7 @@ html(lang='en')
 
   block head
 
-   block content
+   block index
     
     nav.navbar.navbar-inverse.navbar-fixed-top
         .container-fluid
@@ -65,8 +65,6 @@ html(lang='en')
                         a(href='#') Categories
                     li
                         a(href='#') ELearning
-    
-    block content
 
     script(src='js/jquery/jquery-3.2.1.min.js')
     // jQuery (necessary for Bootstrap's JavaScript plugins)
