Edited admindefault layout

--- a/templates/views/admin/users.jade
+++ b/templates/views/admin/users.jade
@@ -1,6 +1,7 @@
 extends ../../layouts/admin-default
 
 block content
+    -var selected = 'Users';
     .row
         .col-sm-9.col-sm-offset-3.col-md-9.col-md-offset-2.main
             input.form-control(type='text', placeholder='Search..')
