--- a/templates/layouts/admin-default.jade
+++ b/templates/layouts/admin-default.jade
@@ -5,7 +5,7 @@ html(lang='en')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     // The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags
-    title Admin Dashboard
+    title #{title}
 
     // Bootstrap
     link(href='/styles/bootstrap/bootstrap.min.css', rel='stylesheet')
@@ -34,38 +34,26 @@ html(lang='en')
             #navbar.navbar-collapse.collapse
                 ul.nav.navbar-nav.navbar-right
                     li
-                        a(href='#') Dashboard
-                    li
-                        a(href='#') Settings
-                    li
-                        a(href='#') Profile
-                    li
                         a(href='#') Sign Out
     .container-fluid
         .row    
             .col-sm-3.col-md-2.sidebar
                 ul.nav.nav-sidebar
-                    li
-                        a(href='/admin') Home
-                    li
-                        a(href='#') Posts
-                    li
-                        a(href='#') Contents
-                    li
-                        a(href='#') Pages
-                    li
-                        a(href='/admin/users') Users
-                    li
-                        a(href='/admin/community-views') Analytics
-                    li
-                        a(href='/admin/community') Community
-                    li
-                        a(href='/admin/publications') Publications
-                    li
-                        a(href='#') Categories
-                    li
-                        a(href='/admin/learning-objects') ELearning
+                    each link in navLinks
+                        li
+                            a(href=link.link) #{link.text}
 
+        .row    
+            .col-sm-5.col-md-2
+                p
+            .col-md-10
+                ol.breadcrumb
+                    each breadcrumb in breadcrumbs
+                        if selected === breadcrumb.text
+                            li.active #{breadcrumb.text}
+                        else
+                            li
+                                a(href=breadcrumb.link) #{breadcrumb.text}
 
     
     block content
