edited admin js files

--- a/templates/views/admin/index.jade
+++ b/templates/views/admin/index.jade
@@ -2,11 +2,8 @@ extends ../../layouts/admin-default
 
 block content
 
-    .container-fluid
-        .row    
-            .col-sm-5.col-md-2
-                p
-            .col-md-9
+    .row
+        .col-sm-9.col-sm-offset-3.col-md-9.col-md-offset-2.main
                 .page-header
                     h2 DPITC Content Management System
                 
