Added customizable CSV report for publications

--- a/templates/views/eresources/analytics/dashboard.jade
+++ b/templates/views/eresources/analytics/dashboard.jade
@@ -6,7 +6,7 @@ block content
       .wrapper
         .row
           .col-md-12
-            h3 Publication Reports
+            h3 E-Resources Reports
           .col-md-6
             .panel.panel-default
               .panel-heading
@@ -51,6 +51,6 @@ block content
               .panel-body
                 ul.list-group
                   li.list-group-item
-                    a(href='#') Publications
+                    a(href='/eresources/reports/publications') Publications
                   li.list-group-item
                     a(href='#') Publication Feedback
