Added API for feedback reports. Can now generate reports with total feedback tally

--- a/templates/views/eresources/analytics/dashboard.jade
+++ b/templates/views/eresources/analytics/dashboard.jade
@@ -53,4 +53,4 @@ block content
                   li.list-group-item
                     a(href='/eresources/reports/publications') Publications
                   li.list-group-item
-                    a(href='#') Publication Feedback
+                    a(href='/eresources/reports/feedback') Publication Feedback
