Renamed feedback report link

--- a/templates/views/eresources/analytics/dashboard.jade
+++ b/templates/views/eresources/analytics/dashboard.jade
@@ -52,5 +52,7 @@ block content
                 ul.list-group
                   li.list-group-item
                     a(href='/eresources/reports/publications') Publications
+                  //- li.list-group-item
+                    a(href='/eresources/reports/feedback') Publication Feedback (ALL)
                   li.list-group-item
-                    a(href='/eresources/reports/feedback') Publication Feedback
+                    a(href='/eresources/reports/feedback') Publication Feedback by Title
