Removed Quick download for feedback

--- a/templates/views/eresources/analytics/dashboard.jade
+++ b/templates/views/eresources/analytics/dashboard.jade
@@ -42,7 +42,7 @@ block content
               .panel-body
                 .btn-group.btn-group-sm(role='group',aria-label='download-count')
                   a(href='/keystone/publication-feedback',type='button').btn.btn-default See All
-                  a(href='/api/publications/reports/downloads?cols=1010000000000000001',type='button').btn.btn-default Quick Download (This month's reviews)
+                  //- a(href='/api/publications/reports/downloads?cols=1010000000000000001',type='button').btn.btn-default Quick Download (This month's reviews)
 
           .col-md-12
             .panel.panel-default
