Fixed broken option in feedback form

--- a/templates/views/eresources/feedback.jade
+++ b/templates/views/eresources/feedback.jade
@@ -45,8 +45,8 @@ block content
                 label(style="margin-right: 15px;")
                   input(type='radio',name='usefulness',value='Satisfactory')
                   | Satisfactory
-                label(style="margin-right: 15px;",value='Fair')
-                  input(type='radio',name='usefulness')
+                label(style="margin-right: 15px;")
+                  input(type='radio',name='usefulness',value='Fair')
                   | Fair
                 label(style="margin-right: 15px;")
                   input(type='radio',name='usefulness',value='Unsatisfactory/Needs Improvement')
@@ -81,8 +81,8 @@ block content
                 label(style="margin-right: 15px;")
                   input(type='radio',name='response',value='Satisfactory')
                   | Satisfactory
-                label(style="margin-right: 15px;",value='Fair')
-                  input(type='radio',name='response')
+                label(style="margin-right: 15px;")
+                  input(type='radio',name='response',value='Fair')
                   | Fair
                 label(style="margin-right: 15px;")
                   input(type='radio',name='response',value='Unsatisfactory/Needs Improvement')
