Added report for All Publications, dynamic filenames for reports.

--- a/templates/views/eresources/analytics/dashboard.jade
+++ b/templates/views/eresources/analytics/dashboard.jade
@@ -56,3 +56,5 @@ block content
                     a(href='/eresources/reports/feedback') Publication Feedback (ALL)
                   li.list-group-item
                     a(href='/eresources/reports/feedback') Publication Feedback by Title
+                  li.list-group-item
+                    a(href='/eresources/reports/feedback-all') All Publication Feedback
